# Yat

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  init_db.py  logic.py  migrate_add_permissions_audit.py  migrate_add_users.py  migrate_remove_is_active.py  migrate_role_to_is_admin.py  migrate_roles_to_viewer_annotator.py  migrate_thumbnails.py  pyproject.toml  requirements.txt  storage.py  test_pdf_export.py  utils.py
.qwen/: settings.json  settings.json.orig
data/projects/тест1/: project.json
data/projects/тест2/: project.json
data/projects/тест3/: project.json
database/: __init__.py  enums.py  models.py  session.py
database/repository/: __init__.py  annotation_repository.py  image_repository.py  project_repository.py  task_repository.py
docs/: CSRF_PROTECTION.md  Cropper_description.md  TESTING.md  TODO.md  generate_pdf.py  userguide.md
services/: __init__.py  ai_service.py  annotation_service.py  audit_service.py  image_service.py  image_storage_service.py  pdf_export_service.py  permission_service.py  project_service.py  task_service.py  user_service.py
static/css/: style.css
static/js/: api.js  dashboard.js  editor.js  project_manager.js  status_widget.js  text_editor.js  zoom-controller.js
templates/: 404.html  cropper.html  editor.html  index.html  login.html  project.html  stats.html  text_editor.html
tests/: __init__.py  conftest.py  test_ai.py  test_api.py  test_integration_auth.py  test_permissions_audit.py  test_services.py  test_users.py
tests/e2e/: .env.example  README.md  __init__.py  conftest.py  test_auth.py  test_projects.py
