[project]
name = "yat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.1.2",
    "flask-wtf>=1.2.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "shapely>=2.0.0",
    "sqlalchemy>=2.0.48",
    "transformers>=4.48.0,<5.0.0",
    "ultralytics>=8.3.0",
    "rapidfuzz>=3.10.0",
    "numpy<2",
]

# =============================================================================
# PyTorch GPU Configuration
# =============================================================================
# По умолчанию: CPU версия (работает везде)
# 
# Для GPU выбери нужную версию CUDA:
#   CPU:       uv sync
#   CUDA 12.1: uv pip install --extra cuda121 torch torchvision
#   CUDA 12.4: uv pip install --extra cuda124 torch torchvision
# =============================================================================

[project.optional-dependencies]
# CPU версия (по умолчанию)
cpu = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

# GPU версия: CUDA 12.1 (для драйверов 470.x - 535.x)
cuda121 = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

# GPU версия: CUDA 12.4 (для драйверов 545.x+)
cuda124 = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

# Индексы для разных версий CUDA
[[tool.uv.index]]
name = "pytorch-cuda-121"
url = "https://download.pytorch.org/whl/cu121"
extra = "cuda121"

[[tool.uv.index]]
name = "pytorch-cuda-124"
url = "https://download.pytorch.org/whl/cu124"
extra = "cuda124"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "vulture>=2.15",
]