[project]
name = "yat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.1.2",
    "flask-wtf>=1.2.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "shapely>=2.0.0",
    "sqlalchemy>=2.0.48",
    "rapidfuzz>=3.10.0",
    "numpy<2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "vulture>=2.15",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.4",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
# Base URL для E2E тестов (Playwright)
base_url = "http://127.0.0.1:5000"

# Маркировки тестов
markers = [
    "e2e: End-to-End тесты с Playwright",
]